# Training-C

./: .gitignore  LICENSE  ccourse.7z  operators.txt  templ.docx  variable_ex.txt
Workspace/: Dockerfile  use_clang.sh  use_gcc.sh
ccourse/: CMakeLists.txt  Makefile  README.txt
ccourse/include/: helloworld.h  picpoc.h
ccourse/src/L01/: helloworld.c
ccourse/src/L02/: picpoc.c
ccourse/src/L03/: test.c
